welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:24: error: value YELLW is not a member of object java.awt.Color
  motif1(Color.YELLW,Color.RED)
               ^